# BMSTU_LABS_DZ_RK

ДЗ ОАиП/К 10 семинару/: Zadacha 1.cpp  Zadacha 11.cpp  Zadacha 2.cpp  Zadacha 3.cpp  Zadacha 4.cpp  Zadacha 5.cpp  Zadacha 6.cpp  Zadacha 7.cpp  Zadacha 8.cpp  Zadacha 9.cpp
ДЗ ОАиП/К 7 семинару/: Zadacha 1.cpp  Zadacha 11.cpp  Zadacha 12.cpp  Zadacha 13.cpp  Zadacha 14.cpp  Zadacha 16.cpp  Zadacha 2 .cpp  Zadacha 3.cpp  Zadacha 4.cpp  Zadacha 5.cpp  Zadacha 6.cpp  Zadacha 7.cpp  Zadacha 8.cpp  Zadacha 9.cpp
Информатика/: 3 Лаба.sql
Информатика/Laba_4/: Laba_Cod.cpp  SQLCod  SqlCod.sql
Информатика/Экзамен/: CMakeLists.txt  Cod_Ekz.cpp  Makefile  README (1).md  README.md  SQL_cod.sql  gitignore
Информатика/Экзамен/SQL/: functions.sql  tables.sql  triggers.sql
Информатика/Экзамен/include/: DatabaseConnection (1).h  Menu.h  Order.h  Payment.h  ReportGenerator.h  User.h
Информатика/Экзамен/sql/: functions.sql  procedures.sql  sample_data.sql  tables.sql  triggers.sql
Информатика/Экзамен/src/: Menu.cpp  Order.cpp  ReportGenerator.cpp  User.cpp  main.cpp
ОАиП/: 3 laba.cpp
